NIFI-14426 Added support for Binary XLS format to ExcelReader (#9874)
Signed-off-by: David Handermann <exceptionfactory@apache.org>
Co-authored-by: dan-s1 <dstieg1@gmail.com>